# ros_kortex

./: README.md
kortex_api/scripts/: download_kortex_api.bash
kortex_demos/: CMakeLists.txt  package.xml  readme.md
kortex_demos/launch/: pickup_cube.launch
kortex_demos/src/pickup_cube/: cube_xy_processing.py  cube_z_processing.py  pickup_cube.py
kortex_demos/srv/: GetCoordinates.srv
kortex_description/robots/: pico_l31k_2f.xacro
kortex_driver/launch/: kortex_driver.launch
kortex_driver/protos/: Errors.proto
kortex_driver/src/non-generated/: kortex_arm_driver.cpp  robotiq_gripper_command_action_server.cpp
kortex_examples/cpp/full_arm/: example_full_arm_movement.cpp
kortex_examples/python/full_arm/: example_full_arm_movement.py
kortex_gazebo/launch/: spawn_kortex_robot.launch
kortex_move_it_config/pico_l31k_2f_move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
kortex_move_it_config/pico_l31k_2f_move_it_config/config/: joint_limits.yaml  pico_l31k_2f.srdf  ros_controllers.yaml
kortex_move_it_config/pico_l31k_2f_move_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pico_l31k_2f_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kortex_tests/: CMakeLists.txt  package.xml
(+8 files in other folders)
